Modified command names

--- a/package.json
+++ b/package.json
@@ -6,24 +6,24 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "get-admin-token": "bin/admin/getAdminToken.js",
-    "setup-env": "bin/admin/setup.js",
-    "delete-cache": "bin/admin/deleteCache.js",
-    "delete-content": "bin/admin/deleteContent.js",
-    "get-settings": "bin/admin/getSettings.js",
-    "update-settings": "bin/admin/updateSettings.js",
-    "get-webhooks": "bin/admin/getWebhooks.js",
-    "create-webhook": "bin/admin/createWebhook.js",
-    "delete-webhook": "bin/admin/deleteWebhook.js",
-    "update-webhook": "bin/admin/updateWebhook.js",
-    "get-api-keys": "bin/token api/getApiKeys.js",
-    "get-api-key-by-hash": "bin/token api/getApiKeyByHash.js",
-    "get-api-key-by-token": "bin/token api/getApiKeyByToken.js",
-    "create-api-key": "bin/token api/createApiKey.js",
-    "revoke-api-key-by-hash": "bin/token api/revokeApiKeyByHash.js",
-    "revoke-api-key-by-token": "bin/token api/revokeApiKeyByToken.js",
-    "rename-api-key-by-hash": "bin/token api/renameApiKeyByHash.js",
-    "rename-api-key-by-token": "bin/token api/renameApiKeyByToken.js"
+    "xedge-get-admin-token": "bin/admin/getAdminToken.js",
+    "xedge-setup-env": "bin/admin/setup.js",
+    "xedge-delete-cache": "bin/admin/deleteCache.js",
+    "xedge-delete-content": "bin/admin/deleteContent.js",
+    "xedge-get-settings": "bin/admin/getSettings.js",
+    "xedge-update-settings": "bin/admin/updateSettings.js",
+    "xedge-get-webhooks": "bin/admin/getWebhooks.js",
+    "xedge-create-webhook": "bin/admin/createWebhook.js",
+    "xedge-delete-webhook": "bin/admin/deleteWebhook.js",
+    "xedge-update-webhook": "bin/admin/updateWebhook.js",
+    "xedge-get-api-keys": "bin/token api/getApiKeys.js",
+    "xedge-get-api-key-by-hash": "bin/token api/getApiKeyByHash.js",
+    "xedge-get-api-key-by-token": "bin/token api/getApiKeyByToken.js",
+    "xedge-create-api-key": "bin/token api/createApiKey.js",
+    "xedge-revoke-api-key-by-hash": "bin/token api/revokeApiKeyByHash.js",
+    "xedge-revoke-api-key-by-token": "bin/token api/revokeApiKeyByToken.js",
+    "xedge-rename-api-key-by-hash": "bin/token api/renameApiKeyByHash.js",
+    "xedge-rename-api-key-by-token": "bin/token api/renameApiKeyByToken.js"
   },
   "keywords": [
     "xedge-cli",
